[metadata]
name = bpnsdata
version = 0.1.6
author = Clea Parcerisas
author_email = clea.parcerisas@vliz.be
description = Add BPNS sea test_data to a geodataframe
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lifewatch/bpnsdata
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7

[options.packages.find]
where = bpnsdata

[options.package_data]
bpnsdata = bpnsdata/data/*.*
